bug fixed and makes it possible to use `:a` user defined macros when USED and not only when defined Test support can set the separators after the input is specified Cast tool was created in the tool module and use was moved from snippet to there. Groovy module also needs it. Groovy Module.