@@ -19,6 +19,7 @@
         <module>jamal-snippet</module>
         <module>jamal-test</module>
         <module>jamal-scriptbasic</module>
+        <module>jamal-groovy</module>
         <module>jamal-plantuml</module>
     </modules>
     <licenses>
@@ -122,6 +123,7 @@
                                     --add-opens jamal.snippet/javax0.jamal.snippet=ALL-UNNAMED
                                     --add-opens jamal.snippet/javax0.jamal.documentation=ALL-UNNAMED
                                     --add-opens jamal.scriptbasic/javax0.jamal.scriptbasic=ALL-UNNAMED
+                                    --add-opens jamal.groovy/javax0.jamal.groovy=ALL-UNNAMED
                                 </argLine>
                     </configuration>
                 </plugin>
